--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,10 @@
-certifi==2022.12.7
-charset-normalizer==3.0.1
+blueprint==3.4.2
 click==8.1.3
-contourpy==1.0.7
-cycler==0.11.0
+colorama==0.4.6
 Flask==2.2.2
-fonttools==4.38.0
-idna==3.4
-importlib-metadata==6.0.0
+Flask-WTF==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
-kiwisolver==1.4.4
-MarkupSafe==2.1.1
-matplotlib==3.6.3
-numpy==1.24.1
-packaging==23.0
-Pillow==9.4.0
-pyparsing==3.0.9
-python-dateutil==2.8.2
-requests==2.28.2
-six==1.16.0
-urllib3==1.26.14
+MarkupSafe==2.1.2
 Werkzeug==2.2.2
-zipp==3.11.0
+WTForms==3.0.1
